# docker-cpp

./: .clang-format  .clang-tidy  .cppcheck  .cppcheck-suppressions  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WEEK1_SUMMARY.md  conanfile.txt  docker-cpp-implementation-roadmap.md  docker-cpp-plan.md
.github/workflows/: ci.yml
cmake/: docker-cpp-config.cmake.in
docs/ci-cd-quality/: README.md  our-journey-with-cppcheck-clang-tidy-and-ci-cd.md  quick-reference-guide.md
docs/weekly-reports/: README.md  WEEK2_SUMMARY.md  week2-summary.md  week3-linux-namespace-implementation.md  week4-cgroup-management-system.md  week5-container-runtime-engine-foundation.md
docs/weekly-reports/integration-testing/: integration-testing-challenges-solutions.md  integration-testing-interview-questions.md  week5-integration-testing-summary.md  week5-phase1-integration-testing.md
include/docker-cpp/cgroup/: cgroup_manager.hpp  resource_monitor.hpp
include/docker-cpp/cli/: docker_cli.hpp
include/docker-cpp/config/: config_manager.hpp
include/docker-cpp/core/: config.hpp  error.hpp  event.hpp  logger.hpp
include/docker-cpp/namespace/: namespace_manager.hpp  process_manager.hpp
include/docker-cpp/plugin/: plugin_interface.hpp  plugin_registry.hpp
scripts/: check-code-quality.sh  setup-dev.sh
src/: CMakeLists.txt  docker-cpp  main.cpp  test_runner.cpp
src/cgroup/: cgroup_manager.cpp  resource_monitor.cpp
src/cli/: docker_cli.cpp
src/config/: config_manager.cpp
src/core/: config.cpp  error.cpp  event.cpp  logger.cpp
src/namespace/: namespace_manager.cpp  process_manager.cpp
src/plugin/: plugin_registry.cpp
src/runtime/: container.cpp  container.hpp  container_config.cpp  container_config.hpp  container_registry.cpp  container_runtime.cpp  container_runtime.hpp
tech-blog/: 00-table-of-contents.md  01-project-vision-and-architecture.md  02-linux-container-fundamentals.md  03-cpp-systems-programming.md  04-container-runtime-architecture.md  05-union-filesystem-implementation.md  06-process-isolation-namespaces.md  07-resource-control-cgroups.md  08-image-management-system.md  09-network-virtualization.md  10-security-hardening.md  11-build-system-implementation.md  12-volume-management-persistent-storage.md  13-cli-design-compatible-interface.md  14-performance-optimization-techniques.md  15-distributed-systems-orchestration.md  16-monitoring-observability-metrics-logs-tracing.md  17-plugin-system-extensibility-third-party-integration.md  18-windows-macos-cross-platform-container-challenges.md  19-testing-strategies-container-runtimes.md  20-production-deployment-reliability-scalability.md  21-container-ecosystem-integration.md  22-future-containerization-lessons-roadmap.md
tests/: CMakeLists.txt  tests-cgroup  tests-core  tests-integration  tests-namespace
tests/integration/: test_container_integration.cpp  test_container_runtime.cpp  test_performance_benchmarks.cpp  test_phase1_integration.cpp
tests/performance/: test_container_benchmarks.cpp
tests/unit/cgroup/: test_cgroup_manager.cpp
tests/unit/config/: test_config_manager.cpp  test_config_manager_advanced.cpp
tests/unit/core/: test_error.cpp  test_event.cpp  test_event_advanced.cpp  test_event_simple.cpp  test_logger.cpp
tests/unit/namespace/: test_namespace_advanced.cpp  test_namespace_manager.cpp  test_process_manager.cpp
tests/unit/plugin/: test_plugin_system.cpp  test_plugin_system_advanced.cpp
tests/unit/runtime/: test_container_config.cpp  test_container_runtime.cpp
